# distributed-raytracer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  colors.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  prelude.rs  ray.rs  sphere.rs  vec3.rs
src/distributed/: client.rs  config.rs  distributed_common.rs  messages.rs  mod.rs  object_server.rs  orchestrator_server.rs  ray_server.rs  server.rs  server_common.rs
src/raytracer/: bounding_box.rs  camera.rs  colors.rs  hittable.rs  hittable_list.rs  interval.rs  material.rs  mod.rs  prelude.rs  ray.rs  sphere.rs  vec3.rs
